--- a/scss/styles-main.scss
+++ b/scss/styles-main.scss
@@ -7,32 +7,4 @@
 @import "_pag-nosotros.scss";
 @import "_pag-hacetupedido.scss";
 @import "_pag-contacto.scss";
-
-
-// MEDIAQUERIES ULTIMAS
-@import "_mediaqueries.scss";
-
-// // EJEMPLOS
-// .hola {
-//     color: red;
-//     a {
-//         color: rgb(66, 126, 180);
-//     }
-// }
-// .hola img {
-//     background-color: aliceblue;
-// }
-
-// /* BUCLES */
-// @for $i from 1 through 5 {
-//     .item-#{$i} {
-//         width: 2px * $i;
-//     }
-// }
-
-// /* EACH */
-// @each $color in blue,yellow,black {
-//     .#{$color} {
-//         color:#{$color};
-//     }
-// }
+@import "_mediaqueries.scss"; // MEDIAQUERIES, QUE QUEDEN ULTIMAS
