--- a/scss/_pag-index.scss
+++ b/scss/_pag-index.scss
@@ -16,7 +16,8 @@ header {
 .parrafo p {
     display: flex;
     justify-content: center;
-    font-family: 'Parisienne';
+    font-family: 'Dancing Script', cursive;
+    // font-family: 'Parisienne';
     font-size: x-large;
     text-align: center;
     margin: 1.875rem 6.25rem;
