--- a/scss/_mixings.scss
+++ b/scss/_mixings.scss
@@ -50,6 +50,15 @@
         border-radius: 0.375rem;
         text-decoration: none;
     }
+    nav-item {
+        background-color: $backcolor;
+        display: inline-block;
+        font-size: 1.375rem;
+        padding: 0.313rem 0.625rem;
+        margin: 0.188rem 0.25rem;
+        border-radius: 0.375rem;
+        text-decoration: none;
+    }
 
     a {
         text-decoration: none;
