--- a/styles/styles-from-sass.css
+++ b/styles/styles-from-sass.css
@@ -71,6 +71,14 @@ header {
     margin: 0.188rem 0.25rem;
     border-radius: 0.375rem;
     text-decoration: none; }
+  .navbar nav-item {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
   .navbar a {
     text-decoration: none;
     color: black; }
@@ -177,6 +185,14 @@ header {
   justify-content: center;
   padding: 0.25rem 0.5rem; }
   .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar nav-item {
     background-color: #ffddd2;
     display: inline-block;
     font-size: 1.375rem;
@@ -312,6 +328,14 @@ header {
   justify-content: center;
   padding: 0.25rem 0.5rem; }
   .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar nav-item {
     background-color: #ffddd2;
     display: inline-block;
     font-size: 1.375rem;
@@ -462,6 +486,14 @@ header {
     margin: 0.188rem 0.25rem;
     border-radius: 0.375rem;
     text-decoration: none; }
+  .navbar nav-item {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
   .navbar a {
     text-decoration: none;
     color: black; }
@@ -601,6 +633,14 @@ header {
   justify-content: center;
   padding: 0.25rem 0.5rem; }
   .navbar li {
+    background-color: #ffddd2;
+    display: inline-block;
+    font-size: 1.375rem;
+    padding: 0.313rem 0.625rem;
+    margin: 0.188rem 0.25rem;
+    border-radius: 0.375rem;
+    text-decoration: none; }
+  .navbar nav-item {
     background-color: #ffddd2;
     display: inline-block;
     font-size: 1.375rem;
